# peak-performance

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CLA.md  How to adapt PeakPerformance to your data.md  Installation.md  LICENSE.md  LICENSE2.md  Pipelinetest.ipynb  README.md  Template.xlsx  Transform_time_and_intensity_to_timeseries.ipynb  Validation.ipynb  environment.yml  models.py  noise_baseline_prior_test.ipynb  pipeline.py  plots.py  pyproject.toml  requirements-dev.txt  requirements.txt  skew_normal_test.ipynb
.github/: dependabot.yml
.github/workflows/: cla.yml  draft-pdf.yml  pre-commit.yml  release.yml  tests.yml
230418_Pipeline_test_Orn70/: areas.xlsx  summary_guesses.xlsx  summary_peak_data.xlsx  summary_time.xlsx
Für ModSim Meeting/: Models_Presentation.ipynb
docs/: requirements.txt
docs/source/: conf.py  index.md  index.rst  literature.bib  pp_models.rst  pp_pipeline.rst  pp_plots.rst
docs/source/markdown/: Diagnostic_plots.md  Installation.md  PeakPerformance_validation.md  PeakPerformance_workflow.md  Peak_model_composition.md  Preparing_raw_data.md  Recreate_data_from_scratch.md
docs/source/markdown documentation files/: Peak model composition.md
docs/source/notebooks/: Create validation plot from raw data.ipynb  Create_results_in_figure_2.ipynb  Create_validation_plot_from_raw_data.ipynb  Ex1_Simple_Pipeline.ipynb  Ex2_Custom_Use_of_PeakPerformance.ipynb  Ex3_Pipeline_with_larger_example_dataset.ipynb  Investigation_doublepeak_separation.ipynb  Investigation_noise_sigma.ipynb  Preparing_raw_data_for_PeakPerformance.ipynb  Processing_test_1_raw_data.ipynb  Skew normal model_skew normal data_noise level 0.6.xlsx  Skew normal model_skew normal data_noise level 1.2.xlsx  test1_all_data.txt  test2_summary.xlsx  test3_df_comparison.xlsx
docs/source/notebooks/paper raw data/connection to traditional data formats/: A1_t1_1_Part2.wiff
docs/source/notebooks/paper raw data/raw data set for validation with MultiQuant/: A1t1R1Part1_23_85.8_86.2.npy  A1t1R1Part1_24_86.8_87.2.npy  A1t1R1Part1_7_83.8_84.2.npy  A1t1R1Part1_8_84.8_85.2.npy  (+137 more)
example/: A1t1R1Part2_110_109.9_110.1.npy  A1t1R1Part2_4_112_110.9_111.1.npy  A1t1R1Part2_5_112_111.9_112.1.npy  A2t2R1Part1_132_85.9_86.1.npy  A4t4R1Part2_137_72.9_73.1.npy  idata_double_skew_rhat_too_high.nc
example/2023-06-22_08-58-08_run/: peak_data_summary.xlsx
example/2023-08-03_15-08-48_run/: area_summary.xlsx  peak_data_summary.xlsx
example/2023-10-04_16-14-28_run/: area_summary.xlsx  peak_data_summary.xlsx
example/example_larger_dataset/: A1t1R1Part1_18_59.8_60.2.npy  A1t1R1Part1_8_83.8_84.2.npy  A1t1R1Part2_14_43.8_44.2.npy  A1t1R1Part2_18_69.8_70.2.npy  A1t1R1Part2_30_71.8_72.2.npy  A1t1R1Part2_43_83.8_84.2.npy  A2t2R1Part1_18_59.8_60.2.npy  A2t2R1Part2_14_43.8_44.2.npy  A2t2R1Part2_18_69.8_70.2.npy  A2t2R1Part2_30_71.8_72.2.npy  A2t2R1Part2_43_83.8_84.2.npy  A3t3R1Part1_18_59.8_60.2.npy  A3t3R1Part1_7_83.8_84.2.npy  A3t3R1Part1_8_83.8_84.2.npy  A3t3R1Part2_14_43.8_44.2.npy  A3t3R1Part2_18_69.8_70.2.npy  A3t3R1Part2_30_71.8_72.2.npy  A3t3R1Part2_43_83.8_84.2.npy  A4t4R1Part1_18_59.8_60.2.npy  A4t4R1Part1_8_83.8_84.2.npy  A4t4R1Part1_8_84.8_85.2.npy  A4t4R1Part2_14_43.8_44.2.npy  A4t4R1Part2_18_69.8_70.2.npy  A4t4R1Part2_30_71.8_72.2.npy  A4t4R1Part2_43_83.8_84.2.npy  A5t5R1Part1_18_59.8_60.2.npy  A5t5R1Part2_14_43.8_44.2.npy  A5t5R1Part2_18_69.8_70.2.npy  A5t5R1Part2_30_71.8_72.2.npy  A5t5R1Part2_43_83.8_84.2.npy  A6t6R1Part1_18_59.8_60.2.npy  A6t6R1Part1_7_83.8_84.2.npy  A6t6R1Part1_8_83.8_84.2.npy  A6t6R1Part1_8_84.8_85.2.npy  A6t6R1Part2_14_43.8_44.2.npy  A6t6R1Part2_18_69.8_70.2.npy  A6t6R1Part2_30_71.8_72.2.npy  A6t6R1Part2_43_83.8_84.2.npy  A7t7R1Part1_18_59.8_60.2.npy  A7t7R1Part1_7_83.8_84.2.npy  (+57 more)
notebooks/: Ex1_Simple_Pipeline.ipynb  Ex2_Pipeline_without_convenience_functions.ipynb  Investigation_doublepeak_separation.ipynb  Investigation_noise_sigma.ipynb  README.md  pipeline.ipynb
paper/: Peak model composition.md  literature.bib  paper.md
peak_performance/: __init__.py  models.py  pipeline.ipynb  pipeline.py  plots.py  test_main.py  test_models.py  test_pipeline.py  test_plots.py
peak_performance/example/: A1t1R1Part2_2_111_109.9_110.1.npy  A1t1R1Part2_3_111_110.9_111.1.npy
peak_performance/example/2023-06-21_16-10-07_run/: area_summary.xlsx  peak_data_summary.xlsx
peak_performance/example/2023-06-22_08-58-08_run/: area_summary.xlsx
peak_performance/tests/: test_models.py
test_data/test_double_peak_report/: idata_double_skew_normal.nc
test_data/test_model_selection/template/: Template.xlsx
test_data/test_plot_model_comparison/: ranking.xlsx
test_data/test_postfiltering_success/: idata_double_normal.nc
(+4 files in other folders)
