[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "peak_performance"
version = "0.7.0"
authors = [
    {name = "Jochen Nießer", email = "j.niesser@fz-juelich.de"},
    {name = "Michael Osthege", email = "m.osthege@fz-juelich.de"},
]
description = "A Python toolbox to fit chromatography peaks with uncertainty."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]
keywords = ["hplc", "mass-spectrometry", "uncertainty quantification"]
license = {text = "AGPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}


[tool.setuptools.packages.find]
include = ["peak_performance*"]

[project.urls]
homepage = "https://jugit.fz-juelich.de/IBG-1/micropro/peak-performance"
documentation = "https://jugit.fz-juelich.de/IBG-1/micropro/peak-performance"
repository = "https://jugit.fz-juelich.de/IBG-1/micropro/peak-performance"

[tool.pytest.ini_options]
xfail_strict=true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 140
ignore-init-module-imports = true

[tool.coverage.run]
omit = [
    # exclude tests files from coverage calculation
    "**/test*.py",
    "**/example",
    "**/notebooks",
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    'test_.*?\.py$',
]
